tests/ui/parser/bad-pointer-type.rs
fn foo(_: *()) {
    //~^ ERROR expected `mut` or `const` keyword in raw pointer type
}

fn main() {}
